src/css/_composition.css
/* Composition */

/* https://cube.fyi/composition.html
Composition rules are for defining layouts, interactions, and flow/rhythm.
Composition rules are not for aesthetic elements such as fonts, colors, borders, shadows, etc.
*/

@layer composition {
	/* "Avoid margins on components and padding on containers" */

	/* Containers - no padding! */
	:is(body, main, article, section, ul, header, footer) {
		padding: 0;
		margin: var(--space-3xs);
	}

	.flow > * + * {
		margin-block-start: var(--flow-space, 0px);
	}

	main {
		margin-block-start: var(--space-m);
		margin-inline: auto;
	}

	footer {
		margin-block-start: var(--space-m);
	}

	article {
		--flow-space: var(--space-l);
		container-name: article;
		container-type: inline-size;
		--grid-min: 24ch;
		--grid-gap: var(--space-m);
	}

	ul {
		--flow-space: var(--space-xs);
	}

	nav ul {
		--grid-min: 8ch;
	}

	aside {
		margin-inline: auto;
	}

	@container article (width > 20rem) {
		aside {
			max-width: 82cqw;
		}
	}

	@container article (width > 30rem) {
		aside {
			max-width: 50cqw;
			margin-inline-start: var(--space-m);
		}
	}

	aside[data-name='skills'] {
		container-name: skills;
		container-type: inline-size;
		--grid-min: 10ch;
		--grid-gap: var(--space-xs);
	}

	aside[data-name='skills'] ul {
		margin-inline-start: 0;
	}

	/* Components - no margins! */
	:is(h1, h2) {
		padding-block-start: var(--space-m-l);
		padding-block-end: var(--space-xs-s);
	}

	p {
		padding-block-start: var(--space-m);
		padding-block-end: var(--space-s);
	}

	li {
		padding-block-start: var(--space-xs);
		padding-block-end: var(--space-3xs);
	}

	footer {
		--sidebar-gap: var(--space-s);
	}

	/* General layouts */

	.box {
		font-family: var(--display-font);
		padding: var(--space-s);
		--color-light: var(--pieton-light);
		--color-dark: var(--pieton-dark);
		border: 0 solid;
		outline: 1px solid var(--region-color);
		outline-offset: calc(var(--border-thin) * -1);
		color: var(--color-dark);
		background-color: var(--color-light);
	}

	.box * {
		color: inherit;
	}

	.box.invert {
		color: var(--color-light);
		background-color: var(--color-dark);
	}

	.grid {
		display: grid;
		grid-gap: var(--grid-gap, var(--space-3xs));
	}

	@supports (width: min(var(--grid-min, 200px), 100%)) {
		.grid {
			grid-template-columns: repeat(
				auto-fit,
				minmax(min(var(--grid-min, 200px), 100%), 1fr)
			);
		}
	}

	.cluster {
		display: flex;
		flex-wrap: wrap;
		gap: var(--space, 1rem);
		justify-content: flex-start;
		align-items: center;
	}

	.with-sidebar {
		display: flex;
		flex-wrap: wrap;
		gap: var(--sidebar-gap, var(--space-xs));
	}

	.with-sidebar > :first-child {
		flex-basis: var(--sidebar-size, 20rem);
		flex-grow: 1;
	}

	.with-sidebar > :last-child {
		flex-basis: 0;
		flex-grow: 999;
		min-inline-size: 50%;
	}

	.switcher {
		display: flex;
		flex-wrap: wrap;
		gap: var(--space-xs);
	}

	.switcher > * {
		flex-grow: 1;
		flex-basis: calc((30rem - 100%) * 999);
	}

	.switcher > :nth-last-child(n + 5),
	.switcher > :nth-last-child(n + 5) ~ * {
		flex-basis: 100%;
	}
}

